# tokenspeed

./: SECURITY.md
.github/workflows/: lint.yml  release-tokenspeed-kernel.yml  retry-failed-approved-prs.yml
docker/: Dockerfile.nvidia
docs/configuration/: server.md
docs/recipes/: models.md
docs/serving/: deepseek-v4.md
python/: pyproject.toml
python/tokenspeed/: _logging.py
python/tokenspeed/cli/: __main__.py  trace_merge.py
test/ci_system/: test_flashinfer_jit_cache.py
test/cli/: test_trace_merge.py
test/runtime/: test_deepseek_v4_attention_ops.py  test_flat_scheduler_config_guard.py  test_mamba_mtp_state_reset.py  test_max_new_tokens_context_cap.py  test_trtllm_flat_groups.py  test_trtllm_spec_seqlen_clamp.py  test_update_block_table_capacity_clamp.py  test_v4_sliding_window_groups_smoke.py
tokenspeed-kernel-amd/: pyproject.toml
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/: _triton.py
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/ops/attention/gluon/: mha_decode_gfx950.py  mha_extend_gfx950.py  mha_prefill_gfx950.py
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/ops/moe/gluon_bf16_moe/: __init__.py  _grid.py  moe.py  moe_align_device.py  moe_align_fused.py  stage1_kernel.py  stage1_splitk_kernel.py  stage2_decode_kernel.py  stage2_kernel.py  warp_decode_gluon_kernel.py
tokenspeed-kernel-amd/test/ops/: test_moe_gluon_bf16_gfx950.py
tokenspeed-kernel/python/: setup.py
tokenspeed-kernel/test/: test_kernel_api_selection.py
tokenspeed-mla/: pyproject.toml
tokenspeed-scheduler/: pyproject.toml
(+100 files in other folders)
